[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memosyne"
version = "0.3.0"
description = "Local-first personal memory infrastructure"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
memosyne = "memosyne:main"

[tool.setuptools]
py-modules = ["memosyne"]
